# mp

./: .gitignore
examples/looped_string/: logistic_medium.hpp  main.cpp  renderer.hpp
include/MiniPhysics/: Container.hpp  Dynamics.hpp  Shader.hpp  Surface.hpp  Vec_ios.hpp
include/mp/: Constraint.hpp  Container.hpp  Dynamics.hpp  Renderer.hpp  Vec.hpp  World.hpp
include/mp/constraints/: constraint.hpp
include/mp/dynamics/: spring_force.hpp
include/mp/rendering/: frame.hpp  shape.hpp
include/mp/utility/: debug.hpp  maths.hpp  maths.py  meta.hpp  range.hpp
src/mp/: Dynamics.hpp  EdgeHandlers.hpp  Vec.hpp
src/mp/common/: vec.hpp  vec_os.hpp
src/mp/dynamics/: medium.hpp  particle.hpp
src/mp/rendering/: frame.hpp  shader.hpp
src/mp/utility/: fixed_point.hpp  maths.hpp  meta.hpp
test/range/: main.cpp
test/sdl/: CMakeLists.txt  ClothRenderer.hpp  SDL_Renderer.hpp  cloth.cpp  logistic_medium.hpp  looped_string.cpp  main.cpp
test/teensy40/: main.cpp  visualiser.maxpat
test/vec/: CMakeLists.txt  test_vec.cpp
